Infra/k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ilay906/quiz-ai-backend:latest
          imagePullPolicy: Always

          # ייבוא ENV רגילים מה-Secret app-env (בלי ה-PEM)
          volumeMounts:
            - name: mysql-ca-vol
              mountPath: /etc/mysql/ssl
              readOnly: true

          ports:
            - name: http
              containerPort: 8000

          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]

      # <<< שים לב: volumes ברמה של spec.template.spec, לא בתוך ה-container >>>
      volumes:
        - name: mysql-ca-vol
          secret:
            secretName: mysql-ca
            items:
              - key: ca.pem
                path: ca.pem
                mode: 256   # 0400 באוקטלי


---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80        # service port
      targetPort: 8000  # maps to containerPort: 8000
