Infra/k8s/backend_deployment.yml
# =====================
# Deployment - backend 
# =====================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        version: "1.0.0"
    spec:
      terminationGracePeriodSeconds: 30  
      containers:
        - name: backend
          image: ilay906/quiz-ai-backend:latest
          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /api/healthz/ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/healthz/live
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /api/healthz/live
              port: 5000
            failureThreshold: 30
            periodSeconds: 2
            timeoutSeconds: 2

          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 20"]

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
# =========================
# Service - backend
# =========================
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
